added game functionality

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
-  <script>console.log('hello world')</script>
-
-  <h1>Rock Paper Scissors</h1>
+  <div class="btn-container">
+    <input type="button" value="rock"></input>
+    <input type="button" value="paper"></input>
+    <input type="button" value="scissors"></input>
+  </div>
+  <div class="result"></div>
   <script src="./script.js"></script>
 </body>
 </html>
