--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
+  <h1>Rock Paper Scissors</h1>
   <div class="btn-container">
     <input type="button" value="rock"></input>
     <input type="button" value="paper"></input>
