--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <input type="button" value="scissors"></input>
   </div>
   <div class="result"></div>
+  <div class="score"></div>
   <script src="./script.js"></script>
 </body>
 </html>
